Revert "JI-1072 Fix tick not showing up"
This reverts commit 1be134ebe98387fed63d5cda6c15968b6230a115.

--- a/styles/choice.css
+++ b/styles/choice.css
@@ -59,9 +59,6 @@
   margin-right: 5px;
   border-radius: 5px;
 }
-.h5p-choices-user.h5p-choices-answered.h5p-choices-user-correct.h5p-choices-no-correct {
-  background-color: #186df7;
-}
 
 .h5p-choices-user.h5p-choices-answered.h5p-choices-user-correct:before {
   font-family: 'h5p-reporting-icons';
